@@ -1,6 +1,7 @@
 package com.example.forohub.security.error;
 
 import com.example.forohub.domain.ValidationException;
+import com.example.forohub.security.error.TopicNotFoundException;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,30 +10,37 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @RestControllerAdvice
-public class ErrorSol {
+public class ErrorHandler {
 
     @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity tratarError404(){
+    public ResponseEntity<Void> handleEntityNotFoundException() {
         return ResponseEntity.notFound().build();
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity tratarError400(MethodArgumentNotValidException e){
-        var errores = e.getFieldErrors().stream().map(DatosErrorValidacion::new).toList();
-        return ResponseEntity.badRequest().body(errores);
+    public ResponseEntity<List<ValidationError>> handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
+        List<ValidationError> errors = e.getFieldErrors().stream()
+                .map(ValidationError::new)
+                .collect(Collectors.toList());
+        return ResponseEntity.badRequest().body(errors);
     }
 
     @ExceptionHandler(ValidationException.class)
-    public ResponseEntity tratarErrorDeValidacion(ValidationException e){
+    public ResponseEntity<String> handleValidationException(ValidationException e) {
         return ResponseEntity.badRequest().body(e.getMessage());
     }
+
     @ExceptionHandler(TopicNotFoundException.class)
-    public ResponseEntity tratarErrorTopicoNoEncontrado(TopicNotFoundException e) {
+    public ResponseEntity<String> handleTopicNotFoundException(TopicNotFoundException e) {
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(e.getMessage());
     }
-    private record DatosErrorValidacion(String campo, String error){
-        public DatosErrorValidacion(FieldError error) {
+
+    private record ValidationError(String field, String error) {
+        public ValidationError(FieldError error) {
             this(error.getField(), error.getDefaultMessage());
         }
     }
